--- a/source/index.html
+++ b/source/index.html
@@ -15,16 +15,17 @@
 
 <header class="page__header">
   <div class="header container">
-    <a class="logo">
-      <img class="logo__image" src="img/svg/header-logo@x1.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
+    <a class="logo" href="#">
+      <img class="logo__image" src="img/svg/logo-cat@1x.svg" width="34" height="38" alt="Логотип кэт-энерджи.">
+      <img class="logo__image" src="img/svg/logo-cat-text@1x.svg" width="101" height="18" alt="Текст логотипа кэт-энерджи.">
     </a>
     <button class="menu-toggle" type="button">
       <span class="visually-hidden">Меню.</span>
     </button>
-    <nav class="header-nav">
+    <nav class="header-nav ">
       <ul class="header-nav__list">
         <li class="header-nav__item">
-          <a class="header-nav__link header-nav__link--active" href="#">Главная</a>
+          <a class="header-nav__link header-nav__link--active">Главная</a>
         </li>
         <li class="header-nav__item">
           <a class="header-nav__link" href="catalog.html">Каталог продукции</a>
@@ -38,17 +39,16 @@
 </header>
 
 <main class="page__main">
-  <h1 class="visually-hidden">Магазин здорового питания для котиков "Cat Energy"</h1>
-
+  <h1 class="promo__title">Функциональное питание для котов</h1>
   <article class="promo container">
-    <h2 class="promo__title">Функциональное питание для котов</h2>
+    <h2 class="visually-hidden">Здоровый образ жизни для человека и кота!</h2>
     <p class="promo__text">Занялся собой? Займись котом!</p>
     <img class="promo__image" src="img/index_can.png" width="280" height="270" alt="упаковка питания Cat Energy.">
-    <a class="promo__link" href="#">Подобрать программу</a>
+    <a class="main-link" href="form.html">Подобрать программу</a>
   </article>
 
   <article class="health-programs">
-    <h2 class="health-programs__title visually-hidden">Программы здорового питания для Вашего котика</h2>
+    <h2 class="visually-hidden">Программы здорового питания для Вашего котика</h2>
     <section class="program program--slim">
       <h3 class="program__title">Похудение</h3>
       <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
@@ -105,13 +105,15 @@
         </div>
 
         <div class="demo-slider__controls control">
-          <button class="control__button" type="button">Было</button>
-          <div class="control__bar">
-            <button class="control__toggle" type="button">
-              <span class="visually-hidden">До/После.</span>
-            </button>
+          <button class="control__button control__button--before" type="button">Было</button>
+          <div class="control__scale">
+            <div class="control__bar">
+              <button class="control__range">
+                <span class="visually-hidden">Кнопка слайдера</span>
+              </button>
+            </div>
           </div>
-          <button class="control__button" type="button">Стало</button>
+          <button class="control__button control__button--after" type="button">Стало</button>
         </div>
       </div>
     </section>
@@ -127,42 +129,43 @@
     </div>
 
     <div class="footer__map map">
-      <img class="map__image" src="img/footer_location.png" width="640" height="724" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
-    </div>
-
-    <div class="footer-local-logo local-logo">
-      <a class="local-logo__link" href="https://www.facebook.com/htmlacademy/">
-        <img class="local-logo__image" src="img/svg/logo-cat.svg" width="128" height="24" alt="Логотип Кэт-энерджи." >
-      </a>
+      <img class="map__image" src="img/footer_location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </div>
 
     <nav class="footer-nav container">
-      <a class="footer-nav__logo" href=""></a>
-      <ul class="social">
-        <li class="social__item">
-          <a class="social__link" href="https://vk.com/htmlacademy/">
-            <span class="visually-hidden">ВКонтакте</span>
-          </a>
-        <li class="social__item">
-          <a class="social__link" href="https://www.instagram.com/htmlacademy/">
-            <span class="visually-hidden">Instagram</span>
-          </a>
-        <li class="social__item">
-          <a class="social__link" href="https://www.facebook.com/htmlacademy/">
-            <span class="visually-hidden">Facebook</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <div class="footer-logo">
-      <a class="footer-logo__academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
-          <path fill="#666666"
-                d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
-        </svg>
-      </a>
-    </div>
+      <div class="local-logo">
+        <a class="local-logo__link" href="#">
+          <img class="local-logo__image" src="img/svg/logo-cat-text@1x.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
+        </a>
+      </div>
 
+      <div class="social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link" href="https://vk.com/htmlacademy/">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          <li class="social__item">
+            <a class="social__link" href="https://www.instagram.com/htmlacademy/">
+              <span class="visually-hidden">Instagram</span>
+            </a>
+          <li class="social__item">
+            <a class="social__link" href="https://www.facebook.com/htmlacademy/">
+              <span class="visually-hidden">Facebook</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer-logo">
+        <a class="footer-logo__academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
+            <path fill="#666666"
+                  d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+          </svg>
+        </a>
+      </div>
+    </nav>
   </section>
 
 </footer>
