--- a/source/form.html
+++ b/source/form.html
@@ -46,9 +46,9 @@
 
     <form class="form" action="https://echo.htmlacademy.ru/" method="post">
       <div class="form__section">
-        <fieldset class="form__group cat-info">
+        <fieldset class="form__group form__group--cat-info">
           <legend class="visually-hidden">Информация о Вашем котике</legend>
-          <ul class="form-group__list">
+          <ul class="form-group__list form-group__list--cat-info">
             <li class="form-group__item">
               <label class="form-group__label" for="cat-name">Имя:<sup>*</sup></label>
               <input class="form-group__input" type="text" name="cat-name" id="cat-name" placeholder="Барсик" required>
@@ -64,9 +64,9 @@
           </ul>
         </fieldset>
 
-        <fieldset class="form__group purpose">
+        <fieldset class="form__group form__group--purpose">
           <legend class="visually-hidden">Цель программы</legend>
-          <ul class="form-group__list purpose__list">
+          <ul class="form-group__list form-group__list--purpose">
             <li class="form-group__item form-group__item--radio">
               <input class="form-group__radio visually-hidden" id="radio-1" type="radio" name="purpose-radio" value="slimming" checked>
               <label class="form-group__label form-group__label--radio" for="radio-1">Похудение</label>
@@ -83,9 +83,9 @@
         </fieldset>
       </div>
 
-      <fieldset class="form__group">
+      <fieldset class="form__group form__group--master">
         <legend class="form-group__legend">Контактные данные (владельца кота)</legend>
-        <ul class="form-group__list">
+        <ul class="form-group__list form-group__list--master">
           <li class="form-group__item">
             <label class="form-group__label" for="person__email">E-mail:<sup>*</sup></label>
             <input class="form-group__input" type="email" name="person__email" id="person__email" placeholder="kuklachev@gmail.com" required>
@@ -97,15 +97,15 @@
         </ul>
       </fieldset>
 
-      <fieldset class="form__group">
+      <fieldset class="form__group form__group--comment">
         <legend class="form-group__legend">Комментарий</legend>
         <label class="visually-hidden" for="person-comment">Расскажите обо всех повАдках кота</label>
-        <textarea class="form-group__input" name="person-comment" id="person-comment" placeholder="Расскажите обо всех повАдках кота"></textarea>
+        <textarea class="form-group__input form-group__input--comment" name="person-comment" id="person-comment" placeholder="Расскажите обо всех повАдках кота"></textarea>
       </fieldset>
 
-      <fieldset class="form__group">
+      <fieldset class="form__group form__group--add">
         <legend class="form-group__legend">Дополнительно</legend>
-        <ul class="form-group__list">
+        <ul class="form-group__list form-group__list--add">
           <li class="form-group__item">
             <input class="form-group__checkbox visually-hidden" type="checkbox" name="sweetener" id="checkbox-1" checked>
             <label class="form-group__label form-group__label--checkbox" for="checkbox-1">Сахарозаменитель</label>
@@ -125,8 +125,8 @@
         </ul>
       </fieldset>
 
-      <div class="form-submit">
-        <button class="main-link" type="submit">Отправить заявку</button>
+      <div class="form__submit">
+        <button class="main-link prc" type="submit">Отправить заявку</button>
         <span class="form__span"><sup>*</sup> &mdash; Обязательные поля</span>
       </div>
 
@@ -137,9 +137,11 @@
 <footer class="page__footer footer">
   <section class="footer__contacts">
     <h2 class="visually-hidden">Контакты</h2>
-    <div class="contacts container">
-      <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
-      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    <div class="contacts-outer contacts-outer--dark">
+      <div class="contacts container">
+        <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
     </div>
 
     <div class="footer__map map">
@@ -187,7 +189,7 @@
           </ul>
         </div>
 
-        <a class="academy__logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
+        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
             <path fill="#666666"
                   d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
