--- a/source/index.html
+++ b/source/index.html
@@ -9,15 +9,49 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
+  <!--   Pixel Glass-->
+  <style>
+    html {
+      background-repeat: no-repeat;
+      background-position: 50% 0;
+      /* Mobile layout by default */
+      background-image: url("./pp/mobile/main.png");
+    }
+
+    /* Tablet */
+    @media (min-width: 768px) {
+      html {
+        /* Tablet layout */
+        background-image: url("./pp/tablet/main.png");
+      }
+    }
+
+    /* Desktop */
+    @media (min-width: 1300px) {
+      html {
+        /* Desktop layout */
+        background-image: url("./pp/desktop/main.png");
+      }
+    }
+  </style>
+  <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
+  <script src="../node_modules/pixel-glass/script.js"></script>
+  <!--   // Pixel Glass-->
 </head>
 
 <body class="page__body">
+<style>
+  body {
+    opacity: 0.6;
+  }
+</style>
+
 
 <header class="page__header">
   <div class="header container">
     <a class="logo" href="#">
-      <img class="logo__image" src="img/svg/logo-cat@1x.svg" width="34" height="38" alt="Логотип кэт-энерджи.">
-      <img class="logo__image" src="img/svg/logo-cat-text@1x.svg" width="101" height="18" alt="Текст логотипа кэт-энерджи.">
+      <img class="logo__icon" src="img/svg/logo-cat@1x.svg" width="34" height="38" alt="Логотип кэт-энерджи.">
+      <img class="logo__text" src="img/svg/logo-cat-text@1x.svg" width="101" height="18" alt="Текст логотипа кэт-энерджи.">
     </a>
     <nav class="header-nav">
       <button class="menu-toggle" type="button">
@@ -41,7 +75,7 @@
 <main class="page__main">
   <article class="promo-outer">
     <div class="promo container">
-      <h1 class="promo__title">Функциональное питание для котов</h1>
+      <h1 class="promo__title">Функциональное <br> питание для котов</h1>
       <p class="promo__text">Занялся собой? Займись котом!</p>
       <img class="promo__image" src="img/index_can.png" width="280" height="270" alt="упаковка питания Cat Energy.">
       <div class="promo__link">
@@ -52,13 +86,13 @@
 
   <article class="health-programs container">
     <h2 class="visually-hidden">Программы здорового питания для Вашего котика</h2>
-    <section class="program">
+    <section class="program program--slim">
       <h3 class="program__title program__title--slim">Похудение</h3>
       <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
         сбросить лишний вес.</p>
       <a class="program__link" href="#">Каталог slim</a>
     </section>
-    <section class="program">
+    <section class="program program--fat">
       <h3 class="program__title program__title--fat">Набор массы</h3>
       <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
       <a class="program__link" href="#">Каталог pro</a>
@@ -71,7 +105,7 @@
       <li class="workflow__item workflow__item--health">Функциональное питание содержит только полезные питательные вещества.</li>
       <li class="workflow__item workflow__item--brew">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
       <li class="workflow__item workflow__item--change">Замените один-два приема обычной еды на наше функциональное питание.</li>
-      <li class="workflow__item workflow__item--profit">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+      <li class="workflow__item workflow__item--profit">Уже через месяц наслаждайтесь изменениями к лучшему <br> вашего питомца!</li>
     </ul>
   </section>
 
@@ -82,21 +116,22 @@
         <p class="demo-cat__subtitle">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих
           тренировок!
           При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <ul class="demo-cat__list">
-          <li class="demo-cat__item">
-            <b class="demo-cat__importance">5 кг</b>
-            <p class="demo-cat__description">снижение веса</p>
-          </li>
-          <li class="demo-cat__item">
-            <b class="demo-cat__importance">60 дней</b>
-            <p class="demo-cat__description">затрачено времени</p>
-          </li>
-          <li class="demo-cat__item demo-cat__item--wide">
-            <p class="demo-cat__expenses">Затраты на питание:
-              <span class="demo-cat__cost">15000 руб.</span>
-            </p>
-          </li>
-        </ul>
+        <div class="demo-cat__info">
+          <ul class="demo-cat__list">
+            <li class="demo-cat__item">
+              <b class="demo-cat__importance">5 кг</b>
+              <p class="demo-cat__description">снижение <br> веса</p>
+            </li>
+            <li class="demo-cat__item">
+              <b class="demo-cat__importance">60 дней</b>
+              <p class="demo-cat__description">затрачено <br> времени</p>
+            </li>
+          </ul>
+          <div class="demo-cat__total">
+            <p class="demo-cat__expenses">Затраты на питание: </p>
+            <span class="demo-cat__cost"> 15000 руб.</span>
+          </div>
+        </div>
       </div>
 
       <div class="demo-slider">
@@ -131,15 +166,19 @@
 <footer class="page__footer footer">
   <section class="footer__contacts">
     <h2 class="visually-hidden">Контакты</h2>
-    <div class="contacts-outer contacts-outer--dark container">
-      <div class="contacts ">
-        <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    <div class="contacts-outer">
+      <div class="contacts container">
+        <b class="contacts__title">Приглашаем <br> к сотрудничеству дилеров!</b>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8
+          <span class="contacts__city" >Санкт-Петербург</span>
+        </p>
       </div>
     </div>
 
-    <div class="footer__map map">
-      <img class="map__image" src="img/footer_location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+    <div class="footer__map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru"
+        width="100%" height="100%" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
     <nav class="footer-nav">
@@ -183,7 +222,7 @@
           </ul>
         </div>
 
-        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
+        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
             <path fill="#666666"
                   d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
