меняет центровщик, внутренние блоки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,10 +36,9 @@
   -->
   <h1 class="visually-hidden">Каталог здорового питания Кэт-энерджи</h1>
 
-  <section class="catalog container">
+  <section class="catalog page__centerer">
     <h2 class="catalog__title">Каталог продукции</h2>
     <ul class="catalog__products">
-
       <li class="product-block">
         <img class="product-block__image" src="img/catalog/chicken-500.png" width="140" height="112" alt="">
         <div class="product">
@@ -204,7 +203,7 @@
 
   <section class="addons">
     <h2 class="addons__title">Дополнительные товары</h2>
-    <div class="addons-inner container">
+    <div class="addons-container page__centerer">
       <ul class="extra">
         <li class="extra__item">
           <h3 class="extra__title">Сахарозаменитель</h3>
@@ -235,7 +234,7 @@
         </li>
       </ul>
 
-      <aside class="stock container">
+      <aside class="stock">
         <h2 class="visually-hidden">Акция от магазина Кэт-энерджи</h2>
         <p class="stock__description">Закажите все <br> и получите чехол для кота в подарок!</p>
       </aside>
