--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 {% extends "./templates/layout.twig" %}
 
 {% block page__main %}
-  <!--
+<!--
     <style>
       html {
         background-repeat: no-repeat;
@@ -35,92 +35,99 @@
     <script src="../node_modules/pixel-glass/script.js"></script>
   -->
 
-  <article class="promo-outer">
-    <div class="promo container">
-      <h1 class="promo__title">Функциональное <br> питание для котов</h1>
-      <p class="promo__text">Занялся собой? Займись котом!</p>
-      <img class="promo__image" src="img/index_can.png" width="280" height="270" alt="упаковка питания Cat Energy.">
-      <div class="promo__link">
-        <a class="main-link main-link--smaller-text" href="form.html">Подобрать программу</a>
+<article class="promo-container">
+  <div class="promo page__centerer">
+    <h1 class="promo__title">Функциональное питание для&nbsp;котов</h1>
+    <p class="promo__text">Занялся собой? Займись котом!</p>
+    <img class="promo__image" src="img/index_can.png" width="280" height="270" alt="упаковка питания Cat Energy.">
+    <div class="promo__link">
+      <a class="main-link main-link--smaller-text" href="form.html">Подобрать программу</a>
+    </div>
+  </div>
+</article>
+
+<article class="health-programs page__centerer">
+  <h2 class="visually-hidden">Программы здорового питания для Вашего котика</h2>
+  <section class="program program--slim">
+    <h3 class="program__title program__title--slim">Похудение</h3>
+    <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
+      диету! Cat Energy Slim поможет вашему питомцу
+      сбросить лишний вес.</p>
+    <a class="program__link" href="#">Каталог slim</a>
+  </section>
+  <section class="program program--fat">
+    <h3 class="program__title program__title--fat">Набор массы</h3>
+    <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет
+      вашему коту нарастить необходимые мышцы!</p>
+    <a class="program__link" href="#">Каталог pro</a>
+  </section>
+</article>
+
+<section class="workflow page__centerer">
+  <h2 class="workflow__title">Как это работает</h2>
+  <ul class="workflow__list">
+    <li class="workflow__item workflow__item--health">Функциональное питание содержит только полезные питательные
+      вещества.</li>
+    <li class="workflow__item workflow__item--brew">Выпускается в виде порошка, который нужно лишь залить кипятком и
+      готово.</li>
+    <li class="workflow__item workflow__item--change">Замените один-два приема обычной еды на наше функциональное
+      питание.</li>
+    <li class="workflow__item workflow__item--profit">Уже через месяц наслаждайтесь изменениями к лучшему <br> вашего
+      питомца!</li>
+  </ul>
+</section>
+
+<section class="demo">
+  <div class="demo-container page__centerer">
+    <div class="demo-cat">
+      <h2 class="demo-cat__title">Живой пример</h2>
+      <p class="demo-cat__subtitle">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+        Отличный результат без изнуряющих
+        тренировок!
+        При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+      <div class="demo-cat__info">
+        <ul class="demo-cat__list">
+          <li class="demo-cat__item">
+            <b class="demo-cat__importance">5 кг</b>
+            <p class="demo-cat__description">снижение <br> веса</p>
+          </li>
+          <li class="demo-cat__item">
+            <b class="demo-cat__importance">60 дней</b>
+            <p class="demo-cat__description">затрачено <br> времени</p>
+          </li>
+        </ul>
+        <div class="demo-cat__total">
+          <p class="demo-cat__expenses">Затраты на питание: </p>
+          <span class="demo-cat__cost"> 15000 руб.</span>
+        </div>
       </div>
     </div>
-  </article>
 
-  <article class="health-programs container">
-    <h2 class="visually-hidden">Программы здорового питания для Вашего котика</h2>
-    <section class="program program--slim">
-      <h3 class="program__title program__title--slim">Похудение</h3>
-      <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
-        сбросить лишний вес.</p>
-      <a class="program__link" href="#">Каталог slim</a>
-    </section>
-    <section class="program program--fat">
-      <h3 class="program__title program__title--fat">Набор массы</h3>
-      <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-      <a class="program__link" href="#">Каталог pro</a>
-    </section>
-  </article>
+    <div class="demo-slider">
+        <div class="demo-slider__cat demo-slider__cat--before">
+          <img class="cat-fat" src="img/slider_cat-fat.png" width="280" height="232" alt="кот до курса cat-energy.">
+        </div>
+        <div class="demo-slider__cat demo-slider__cat--static">
+          <img class="cats-static" src="img/index_cat-slider@1x.png" width="592" height="511"
+            alt="слайдер в половинном состоянии.">
+        </div>
+        <div class="demo-slider__cat demo-slider__cat--after visually-hidden">
+          <img class="cat-skinny" src="img/slider_cat-skinny.png" width="243" height="232"
+            alt="кот после курса cat-energy.">
+        </div>
 
-  <section class="workflow container">
-    <h2 class="workflow__title">Как это работает</h2>
-    <ul class="workflow__list">
-      <li class="workflow__item workflow__item--health">Функциональное питание содержит только полезные питательные вещества.</li>
-      <li class="workflow__item workflow__item--brew">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-      <li class="workflow__item workflow__item--change">Замените один-два приема обычной еды на наше функциональное питание.</li>
-      <li class="workflow__item workflow__item--profit">Уже через месяц наслаждайтесь изменениями к лучшему <br> вашего питомца!</li>
-    </ul>
-  </section>
-
-  <div class="demo">
-    <section class="demo-inner container">
-      <div class="demo-cat">
-        <h2 class="demo-cat__title">Живой пример</h2>
-        <p class="demo-cat__subtitle">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих
-          тренировок!
-          При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <div class="demo-cat__info">
-          <ul class="demo-cat__list">
-            <li class="demo-cat__item">
-              <b class="demo-cat__importance">5 кг</b>
-              <p class="demo-cat__description">снижение <br> веса</p>
-            </li>
-            <li class="demo-cat__item">
-              <b class="demo-cat__importance">60 дней</b>
-              <p class="demo-cat__description">затрачено <br> времени</p>
-            </li>
-          </ul>
-          <div class="demo-cat__total">
-            <p class="demo-cat__expenses">Затраты на питание: </p>
-            <span class="demo-cat__cost"> 15000 руб.</span>
+      <div class="control">
+        <button class="control__button control__button--before" type="button">Было</button>
+        <div class="control__scale">
+          <div class="control__bar">
+            <button class="control__range">
+              <span class="visually-hidden">Кнопка слайдера</span>
+            </button>
           </div>
         </div>
+        <button class="control__button control__button--after" type="button">Стало</button>
       </div>
-
-      <div class="demo-slider">
-        <div class="demo-slider__inner">
-          <div class="demo-slider__cat demo-slider__cat--before">
-            <img class="cat-fat" src="img/slider_cat-fat.png" width="280" height="232" alt="кот до курса cat-energy.">
-          </div>
-          <div class="demo-slider__cat demo-slider__cat--static">
-            <img class="cats-static" src="img/index_cat-slider@1x.png" width="592" height="511" alt="слайдер в половинном состоянии.">
-          </div>
-          <div class="demo-slider__cat demo-slider__cat--after visually-hidden">
-            <img class="cat-skinny" src="img/slider_cat-skinny.png" width="243" height="232" alt="кот после курса cat-energy.">
-          </div>
-        </div>
-
-        <div class="control">
-          <button class="control__button control__button--before" type="button">Было</button>
-          <div class="control__scale">
-            <div class="control__bar">
-              <button class="control__range">
-                <span class="visually-hidden">Кнопка слайдера</span>
-              </button>
-            </div>
-          </div>
-          <button class="control__button control__button--after" type="button">Стало</button>
-        </div>
-      </div>
-    </section>
-  </div>
+    </div>
+</section>
+</div>
 {% endblock %}
