--- a/source/form.html
+++ b/source/form.html
@@ -3,7 +3,7 @@
 {% extends "./templates/layout.twig" %}
 
 {% block page__main %}
-  <!--
+<!--
     <style>
       html {
         background-repeat: no-repeat;
@@ -34,96 +34,107 @@
     <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
     <script src="../node_modules/pixel-glass/script.js"></script>
   -->
-  <section class="main-form container">
-    <h1 class="main-form__title">Подбор программы</h1>
-    <p class="main-form__description">Заполните анкету, и мы подберем <br> программу питания для вашего кота</p>
+<section class="main-form page__centerer">
+  <h1 class="main-form__title">Подбор программы</h1>
+  <p class="main-form__description">Заполните анкету, и мы подберем <br> программу питания для вашего кота</p>
 
-    <form class="form" action="https://echo.htmlacademy.ru/" method="post">
-      <div class="form__section">
-        <fieldset class="form-group form-group--cat-info">
-          <legend class="visually-hidden">Информация о Вашем котике</legend>
-          <ul class="form-group__list form-group__list--cat-info">
-            <li class="form-group__item">
-              <label class="form-group__label" for="cat-name">Имя:*</label>
-              <input class="form-group__input" type="text" name="cat-name" id="cat-name" placeholder="Барсик" required>
-            </li>
-            <li class="form-group__item">
-              <label class="form-group__label" for="cat-weight">Вес (кг):<sup>*</sup></label>
-              <input class="form-group__input" type="number" name="cat-weight" id="cat-weight" min="1" max="25" placeholder="7" required>
-            </li>
-            <li class="form-group__item">
-              <label class="form-group__label" for="cat-age">Возраст (лет):<sup>*</sup></label>
-              <input class="form-group__input" type="number" name="cat-age" id="cat-age" min="1" max="25" step="0.5" placeholder="7" required>
-            </li>
-          </ul>
-        </fieldset>
-
-        <fieldset class="form-group form-group--purpose">
-          <legend class="visually-hidden">Цель программы</legend>
-          <ul class="form-group__list form-group__list--purpose">
-            <li class="form-group__item form-group__item--radio">
-              <input class="form-group__radio visually-hidden" id="radio-1" type="radio" name="purpose-radio" value="slimming" checked>
-              <label class="form-group__label form-group__label--radio" for="radio-1">Похудение</label>
-            </li>
-            <li class="form-group__item">
-              <input class="form-group__radio visually-hidden" id="radio-2" type="radio" name="purpose-radio" value="fatting">
-              <label class="form-group__label form-group__label--radio" for="radio-2">Набор массы</label>
-            </li>
-            <li class="form-group__item">
-              <input class="form-group__radio visually-hidden" id="radio-3" type="radio" name="purpose-radio" value="need-help">
-              <label class="form-group__label form-group__label--radio" for="radio-3">Не знаю (Нужен ваш совет)</label>
-            </li>
-          </ul>
-        </fieldset>
-      </div>
-
-      <fieldset class="form-group form-group--master">
-        <legend class="form-group__legend form-group__legend--master">Контактные данные (владельца кота)</legend>
-        <ul class="form-group__list form-group__list--master">
+  <form class="form" action="https://echo.htmlacademy.ru/" method="post">
+    <div class="form__section">
+      <fieldset class="form-group form-group--cat-info">
+        <legend class="visually-hidden">Информация о Вашем котике</legend>
+        <ul class="form-group__list form-group__list--cat-info">
           <li class="form-group__item">
-            <label class="form-group__label" for="person__email">E-mail:<sup>*</sup></label>
-            <input class="form-group__input" type="email" name="person__email" id="person__email" placeholder="kuklachev@gmail.com" required>
+            <label class="form-group__label" for="cat-name">Имя:*</label>
+            <input class="form-group__input" type="text" name="cat-name" id="cat-name" placeholder="Барсик" required>
           </li>
           <li class="form-group__item">
-            <label class="form-group__label" for="person__phone">Телефон:<sup>*</sup></label>
-            <input class="form-group__input" type="tel" name="person__phone" id="person__phone" placeholder="8 (960) 900-60-90" required>
+            <label class="form-group__label" for="cat-weight">Вес (кг):<sup>*</sup></label>
+            <input class="form-group__input" type="number" name="cat-weight" id="cat-weight" min="1" max="25"
+              placeholder="7" required>
+          </li>
+          <li class="form-group__item">
+            <label class="form-group__label" for="cat-age">Возраст (лет):<sup>*</sup></label>
+            <input class="form-group__input" type="number" name="cat-age" id="cat-age" min="1" max="25" step="0.5"
+              placeholder="7" required>
           </li>
         </ul>
       </fieldset>
 
-      <fieldset class="form-group form-group--comment">
-        <legend class="form-group__legend form-group__legend--comment">Комментарий</legend>
-        <label class="visually-hidden" for="person-comment">Расскажите обо всех повАдках кота</label>
-        <textarea class="form-group__input form-group__input--comment" name="person-comment" id="person-comment" placeholder="Расскажите обо всех повАдках кота"></textarea>
-      </fieldset>
-
-      <fieldset class="form-group form-group--add">
-        <legend class="form-group__legend form-group__legend--add ">Дополнительно</legend>
-        <ul class="form-group__list form-group__list--add">
-          <li class="form-group__item form-group__item--checkbox">
-            <input class="form-group__checkbox visually-hidden" type="checkbox" name="sweetener" id="checkbox-1" checked>
-            <label class="form-group__label form-group__label--checkbox" for="checkbox-1">Сахарозаменитель</label>
+      <fieldset class="form-group form-group--purpose">
+        <legend class="visually-hidden">Цель программы</legend>
+        <ul class="form-group__list form-group__list--purpose">
+          <li class="form-group__item form-group__item--radio">
+            <input class="form-group__radio visually-hidden" id="radio-1" type="radio" name="purpose-radio"
+              value="slimming" checked>
+            <label class="form-group__label form-group__label--radio" for="radio-1">Похудение</label>
           </li>
-          <li class="form-group__item form-group__item--checkbox">
-            <input class="form-group__checkbox visually-hidden" type="checkbox" name="water" id="checkbox-2">
-            <label class="form-group__label form-group__label--checkbox" for="checkbox-2">Питьевая вода</label>
+          <li class="form-group__item">
+            <input class="form-group__radio visually-hidden" id="radio-2" type="radio" name="purpose-radio"
+              value="fatting">
+            <label class="form-group__label form-group__label--radio" for="radio-2">Набор массы</label>
           </li>
-          <li class="form-group__item form-group__item--checkbox">
-            <input class="form-group__checkbox visually-hidden" type="checkbox" name="milk" id="checkbox-3">
-            <label class="form-group__label form-group__label--checkbox" for="checkbox-3">Молоко</label>
-          </li>
-          <li class="form-group__item form-group__item--checkbox">
-            <input class="form-group__checkbox visually-hidden" type="checkbox" name="vitamins" id="checkbox-4">
-            <label class="form-group__label form-group__label--checkbox" for="checkbox-4">Витамины</label>
+          <li class="form-group__item">
+            <input class="form-group__radio visually-hidden" id="radio-3" type="radio" name="purpose-radio"
+              value="need-help">
+            <label class="form-group__label form-group__label--radio" for="radio-3">Не знаю (Нужен ваш совет)</label>
           </li>
         </ul>
       </fieldset>
+    </div>
 
-      <div class="form__submit">
-        <button class="form__button main-link" type="submit">Отправить заявку</button>
-        <span class="form__span"><sup>*</sup> &mdash; Обязательные поля</span>
-      </div>
+    <fieldset class="form-group form-group--master">
+      <legend class="form-group__legend form-group__legend--master">Контактные данные (владельца кота)</legend>
+      <ul class="form-group__list form-group__list--master">
+        <li class="form-group__item">
+          <label class="form-group__label" for="person__email">E-mail:<sup>*</sup></label>
+          <input class="form-group__input" type="email" name="person__email" id="person__email"
+            placeholder="kuklachev@gmail.com" required>
+        </li>
+        <li class="form-group__item">
+          <label class="form-group__label" for="person__phone">Телефон:<sup>*</sup></label>
+          <input class="form-group__input" type="tel" name="person__phone" id="person__phone"
+            placeholder="8 (960) 900-60-90" required>
+        </li>
+      </ul>
+    </fieldset>
 
-    </form>
-  </section>
+    <fieldset class="form-group form-group--comment">
+      <legend class="form-group__legend form-group__legend--comment">Комментарий</legend>
+      <ul class="form-group__list">
+        <li class="form-group__item">
+          <label class="visually-hidden" for="person-comment">Расскажите обо всех повАдках кота</label>
+          <textarea class="form-group__input form-group__input--comment" name="person-comment" id="person-comment"
+            placeholder="Расскажите обо всех повАдках кота"></textarea>
+        </li>
+    </fieldset>
+
+    <fieldset class="form-group form-group--add">
+      <legend class="form-group__legend form-group__legend--add ">Дополнительно</legend>
+      <ul class="form-group__list form-group__list--add">
+        <li class="form-group__item form-group__item--checkbox">
+          <input class="form-group__checkbox visually-hidden" type="checkbox" name="sweetener" id="checkbox-1" checked>
+          <label class="form-group__label form-group__label--checkbox" for="checkbox-1">Сахарозаменитель</label>
+        </li>
+        <li class="form-group__item form-group__item--checkbox">
+          <input class="form-group__checkbox visually-hidden" type="checkbox" name="water" id="checkbox-2">
+          <label class="form-group__label form-group__label--checkbox" for="checkbox-2">Питьевая вода</label>
+        </li>
+        <li class="form-group__item form-group__item--checkbox">
+          <input class="form-group__checkbox visually-hidden" type="checkbox" name="milk" id="checkbox-3">
+          <label class="form-group__label form-group__label--checkbox" for="checkbox-3">Молоко</label>
+        </li>
+        <li class="form-group__item form-group__item--checkbox">
+          <input class="form-group__checkbox visually-hidden" type="checkbox" name="vitamins" id="checkbox-4">
+          <label class="form-group__label form-group__label--checkbox" for="checkbox-4">Витамины</label>
+        </li>
+      </ul>
+    </fieldset>
+
+    <div class="form__submit">
+      <button class="form__button main-link" type="submit">Отправить заявку</button>
+      <span class="form__span"><sup>*</sup> &mdash; Обязательные поля</span>
+    </div>
+
+  </form>
+</section>
 {% endblock %}
