правит классы согласно вложенности

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -58,7 +58,7 @@
             </li>
           </ul>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
+        <a class="product-block__button main-link" href="#">Заказать</a>
       </li>
 
       <li class="product-block">
@@ -80,7 +80,7 @@
             </li>
           </ul>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
+        <a class="product-block__button main-link" href="#">Заказать</a>
       </li>
 
       <li class="product-block">
@@ -102,7 +102,7 @@
             </li>
           </ul>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
+        <a class="product-block__button main-link" href="#">Заказать</a>
       </li>
 
       <li class="product-block">
@@ -124,7 +124,7 @@
             </li>
           </ul>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
+        <a class="product-block__button main-link" href="#">Заказать</a>
       </li>
 
       <li class="product-block">
@@ -146,7 +146,7 @@
             </li>
           </ul>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
+        <a class="product-block__button main-link" href="#">Заказать</a>
       </li>
 
       <li class="product-block">
@@ -168,7 +168,7 @@
             </li>
           </ul>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
+        <a class="product-block__button main-link" href="#">Заказать</a>
       </li>
 
       <li class="product-block">
@@ -190,13 +190,13 @@
             </li>
           </ul>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
+        <a class="product-block__button main-link" href="#">Заказать</a>
       </li>
 
       <li class="product-block product-block--more">
         <h3 class="product-block__title product-block__title&#45;&#45;more">Показать еще 100500 товаров</h3>
         <p class="product-block__description">На самом деле вкусов гораздо больше!</p>
-        <a class="product__button main-link main-link&#45;&#45;discreet" href="#">Показать все</a>
+        <a class="product-block__button main-link main-link&#45;&#45;discreet" href="#">Показать все</a>
       </li>
     </ul>
   </section>
